# hungry-wolf-root/hungry-wolf-facts/src/main/java/com/hungrywolf/facts/model/generated/Cart.java
@@ -1,27 +1,200 @@
 package com.hungrywolf.facts.model.generated;
 
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.hungrywolf.facts.model.generated.CartItems;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import org.springframework.validation.annotation.Validated;
+import java.util.Objects;
+
 import javax.validation.Valid;
-import javax.validation.constraints.*;
+
+import org.springframework.validation.annotation.Validated;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import io.swagger.annotations.ApiModelProperty;
 
 /**
  * Cart
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-11-03T01:23:28.090-07:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-11-06T20:18:58.567-08:00")
 
 public class Cart   {
+  @JsonProperty("id")
+  private Integer id = null;
+  
+  @JsonProperty("cartHWRN")
+  private String cartHWRN = null;
+  
+  @JsonProperty("wolfId")
+  private Integer wolfId = null;
+
+  @JsonProperty("createdDate")
+  private ZonedDateTime createdDate = null;
+
+  @JsonProperty("modifiedDate")
+  private ZonedDateTime modifiedDate = null;
+
+  @JsonProperty("wolfCartStatusCd")
+  private String wolfCartStatusCd = null;
+
+  @JsonProperty("wolfCartStatusDesc")
+  private String wolfCartStatusDesc = null;
+
+  @JsonProperty("auto_deleted")
+  private Boolean autoDeleted = null;
+
   @JsonProperty("items")
   @Valid
   private List<CartItems> items = null;
+
+  
+  public Cart id(int id) {
+		this.id = id;
+		return this;
+  }
+  
+  public Cart cartHWRN(String cartHWRN) {
+    this.cartHWRN = cartHWRN;
+    return this;
+  }
+
+  /**
+   * Get cartHWRN
+   * @return cartHWRN
+  **/
+  @ApiModelProperty(example = "00001-C456987", value = "")
+
+
+  public String getCartHWRN() {
+    return cartHWRN;
+  }
+
+  public void setCartHWRN(String cartHWRN) {
+    this.cartHWRN = cartHWRN;
+  }
+
+  public Cart wolfId(Integer wolfId) {
+    this.wolfId = wolfId;
+    return this;
+  }
+
+  /**
+   * Get wolfId
+   * @return wolfId
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getWolfId() {
+    return wolfId;
+  }
+
+  public void setWolfId(Integer wolfId) {
+    this.wolfId = wolfId;
+  }
+
+  public Cart createdDate(ZonedDateTime createdDate) {
+    this.createdDate = createdDate;
+    return this;
+  }
+
+  /**
+   * Get createdDate
+   * @return createdDate
+  **/
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public ZonedDateTime getCreatedDate() {
+    return createdDate;
+  }
+
+  public void setCreatedDate(ZonedDateTime createdDate) {
+    this.createdDate = createdDate;
+  }
+
+  public Cart modifiedDate(ZonedDateTime modifiedDate) {
+    this.modifiedDate = modifiedDate;
+    return this;
+  }
+
+  /**
+   * Get modifiedDate
+   * @return modifiedDate
+  **/
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public ZonedDateTime getModifiedDate() {
+    return modifiedDate;
+  }
+
+  public void setModifiedDate(ZonedDateTime modifiedDate) {
+    this.modifiedDate = modifiedDate;
+  }
+
+  public Cart wolfCartStatusCd(String wolfCartStatusCd) {
+    this.wolfCartStatusCd = wolfCartStatusCd;
+    return this;
+  }
+
+  /**
+   * Get wolfCartStatusCd
+   * @return wolfCartStatusCd
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getWolfCartStatusCd() {
+    return wolfCartStatusCd;
+  }
+
+  public void setWolfCartStatusCd(String wolfCartStatusCd) {
+    this.wolfCartStatusCd = wolfCartStatusCd;
+  }
+
+  public Cart wolfCartStatusDesc(String wolfCartStatusDesc) {
+    this.wolfCartStatusDesc = wolfCartStatusDesc;
+    return this;
+  }
+
+  /**
+   * Get wolfCartStatusDesc
+   * @return wolfCartStatusDesc
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getWolfCartStatusDesc() {
+    return wolfCartStatusDesc;
+  }
+
+  public void setWolfCartStatusDesc(String wolfCartStatusDesc) {
+    this.wolfCartStatusDesc = wolfCartStatusDesc;
+  }
+
+  public Cart autoDeleted(Boolean autoDeleted) {
+    this.autoDeleted = autoDeleted;
+    return this;
+  }
+
+  /**
+   * Get autoDeleted
+   * @return autoDeleted
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Boolean isAutoDeleted() {
+    return autoDeleted;
+  }
+
+  public void setAutoDeleted(Boolean autoDeleted) {
+    this.autoDeleted = autoDeleted;
+  }
 
   public Cart items(List<CartItems> items) {
     this.items = items;
@@ -62,12 +235,19 @@ public class Cart   {
       return false;
     }
     Cart cart = (Cart) o;
-    return Objects.equals(this.items, cart.items);
+    return Objects.equals(this.cartHWRN, cart.cartHWRN) &&
+        Objects.equals(this.wolfId, cart.wolfId) &&
+        Objects.equals(this.createdDate, cart.createdDate) &&
+        Objects.equals(this.modifiedDate, cart.modifiedDate) &&
+        Objects.equals(this.wolfCartStatusCd, cart.wolfCartStatusCd) &&
+        Objects.equals(this.wolfCartStatusDesc, cart.wolfCartStatusDesc) &&
+        Objects.equals(this.autoDeleted, cart.autoDeleted) &&
+        Objects.equals(this.items, cart.items);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(items);
+    return Objects.hash(cartHWRN, wolfId, createdDate, modifiedDate, wolfCartStatusCd, wolfCartStatusDesc, autoDeleted, items);
   }
 
   @Override
@@ -75,6 +255,13 @@ public class Cart   {
     StringBuilder sb = new StringBuilder();
     sb.append("class Cart {\n");
     
+    sb.append("    cartHWRN: ").append(toIndentedString(cartHWRN)).append("\n");
+    sb.append("    wolfId: ").append(toIndentedString(wolfId)).append("\n");
+    sb.append("    createdDate: ").append(toIndentedString(createdDate)).append("\n");
+    sb.append("    modifiedDate: ").append(toIndentedString(modifiedDate)).append("\n");
+    sb.append("    wolfCartStatusCd: ").append(toIndentedString(wolfCartStatusCd)).append("\n");
+    sb.append("    wolfCartStatusDesc: ").append(toIndentedString(wolfCartStatusDesc)).append("\n");
+    sb.append("    autoDeleted: ").append(toIndentedString(autoDeleted)).append("\n");
     sb.append("    items: ").append(toIndentedString(items)).append("\n");
     sb.append("}");
     return sb.toString();
@@ -90,5 +277,19 @@ public class Cart   {
     }
     return o.toString().replace("\n", "\n    ");
   }
+
+public Integer getId() {
+	return id;
+}
+
+public void setId(Integer id) {
+	this.id = id;
+}
+
+public Boolean getAutoDeleted() {
+	return autoDeleted;
+}
+
+
 }
 
